--- a/combined_models.ipynb
+++ b/combined_models.ipynb
@@ -1153,7 +1153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -1187,8 +1187,8 @@
       "Prec: 0.5533 ± 0.1805\n",
       "ROI AUC: 0.8688 ± 0.0861\n",
       "\n",
-      "Global ROI Accuracy: 0.7945\n",
-      "Center Distance: 4.9726\n",
+      "Global ROI Accuracy: 0.7945 ± 0.0634\n",
+      "Center Distance: 4.9726 ± 3.5491\n",
       "\n",
       "==================== CUBE-WISE (Size 8) REPORT ====================\n",
       "\n",
@@ -1209,8 +1209,8 @@
       "Prec: 0.6388 ± 0.1970\n",
       "ROI AUC: 0.8901 ± 0.1036\n",
       "\n",
-      "Global ROI Accuracy: 0.7675\n",
-      "Center Distance: 0.7146\n"
+      "Global ROI Accuracy: 0.7675 ± 0.0588\n",
+      "Center Distance: 0.7146 ± 0.3529\n"
      ]
     },
     {
@@ -1545,6 +1545,7 @@
     "    \n",
     "    for c in range(3):\n",
     "        print(f\"\\n--- Clase: {cls_names[c]} ---\")\n",
+    "        # Métricas por clase con su desviación estándar existente\n",
     "        d_m = np.nanmean(metrics_dict['dice'][c])\n",
     "        s_m = np.nanmean(metrics_dict['sens'][c])\n",
     "        p_m = np.nanmean(metrics_dict['prec'][c])\n",
@@ -1557,8 +1558,18 @@
     "            auc_m = np.nanmean(metrics_dict['auc'][c])\n",
     "            print(f\"ROI AUC: {auc_m:.4f} ± {np.nanstd(metrics_dict['auc'][c]):.4f}\")\n",
     "            \n",
-    "    print(f\"\\nGlobal ROI Accuracy: {np.nanmean(metrics_dict['acc']):.4f}\")\n",
-    "    print(f\"Center Distance: {np.nanmean(metrics_dict['dist']):.4f}\")\n",
+    "    \n",
+    "    # Cálculo de media y desviación estándar para Accuracy y Distancia\n",
+    "    \n",
+    "    # Global ROI Accuracy\n",
+    "    acc_mean = np.nanmean(metrics_dict['acc'])\n",
+    "    acc_std = np.nanstd(metrics_dict['acc'])\n",
+    "    print(f\"\\nGlobal ROI Accuracy: {acc_mean:.4f} ± {acc_std:.4f}\")\n",
+    "    \n",
+    "    # Center Distance\n",
+    "    dist_mean = np.nanmean(metrics_dict['dist'])\n",
+    "    dist_std = np.nanstd(metrics_dict['dist'])\n",
+    "    print(f\"Center Distance: {dist_mean:.4f} ± {dist_std:.4f}\")\n",
     "\n",
     "def plot_average_roc(metrics_dict, filename, title):\n",
     "    plt.figure(figsize=(8, 6))\n",
