--- a/combined_models.ipynb
+++ b/combined_models.ipynb
@@ -513,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -824,6 +824,12 @@
     "        \n",
     "        # Normalizar probabilidades\n",
     "        combined_prob_maps = combined_prob_maps / (combined_prob_maps.sum(dim=0, keepdim=True) + 1e-6)\n",
+    "\n",
+    "        # # Solo Pipe1\n",
+    "        # combined_prob_maps = prob_maps1\n",
+    "\n",
+    "        # # Solo Pipe2\n",
+    "        # combined_prob_maps = prob_maps2\n",
     "        \n",
     "        # Convertir a numpy\n",
     "        prob_maps_np = combined_prob_maps.cpu().numpy()  # [3, 128, 128, 128]\n",
